--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 
     <a-camera position="0 8 15"></a-camera>
 
-    <!-------------------------------------------Asset Management------------------------------------------->
+    <!------------------------------------------- Administración de recursos ------------------------------------------->
     <a-assets timeout="10000">
 
       <a-asset-item id="tiger" src="./models/tiger/Mesh_BengalTiger.gltf"></a-asset-item>      
@@ -21,32 +21,32 @@
 
     <a-sky src="#bg"></a-sky>
 
-    <!-------------------------------------Lights in the scene----------------------------------------------->
+    <!------------------------------------- Luces en la escena ----------------------------------------------->
 
-    <!--Ambient-->
-    <!--Add Code here-->
+    <!-- Ambiental -->
+    <!-- Agregar el código aquí -->
 
 
-    <!--Directional-->
-    <!--Add Code here-->
+    <!-- Direccional -->
+    <!-- Agregar el código aquí -->
     
-    <!-------------------------------------Circular Plane----------------------------------------------->
+    <!------------------------------------- Plano circular ----------------------------------------------->
 
     <a-circle position="-0.4 -0.76 -25" rotation="-90 0 0" radius="100" shadow="receive: true" visible="true"
       color="#2E6F10">
     </a-circle>
 
-    <!--------------------------------------GLTF Models----------------------------------------------------------->
+    <!-------------------------------------- Modelos GLTF ----------------------------------------------------------->
 
-    <!--Tiger-->
+    <!-- Tigre -->
     <a-entity>
       <a-entity position="-5 2 0" rotation="0 55 0" scale="0.05 0.05 0.05" gltf-model="#tiger" shadow="cast: true;">
       </a-entity>
     </a-entity>
     
-    <!--Add Code here-->
+    <!-- Agregar el código aquí -->
 
-    <!--------------------------------------END----------------------------------------------------------->
+    <!-------------------------------------- Final ----------------------------------------------------------->
   </a-scene>
 </body>
 
